--- a/Week1/Webpage Project/style.css
+++ b/Week1/Webpage Project/style.css
@@ -1,3 +1,6 @@
+* {
+    font-family: "Times New Roman", Times, serif;
+}
 body {
     margin: 0;
     padding: 0;
@@ -5,44 +8,51 @@ body {
 }
 header {
     /* background-color: cornflowerblue; */
+    margin: 15px 30px;
 }
 
 #logo {
-    height: 70px;
+    height: 50px;
 }
 
 #hamburgerIcon {
-    height: 50px;
+    height: 30px;
     float: right;
     padding: 10px;
 }
 
 #splash {
     position: relative;
-    height: 700px;
+    height: 500px;
     background-image: url("assets/spices.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: contain;
+    background-color: rgba(100, 100, 100, 90);
 }
 
 #splash div {
     position: absolute;
     width: 100%;
-    height: 100px;
-    margin: auto;
+
     /* background-color: tomato; */
 }
 h3 {
     color: white;
     text-align: center;
+    font-size: 20pt;
+
+    font-style: italic;
+    font-weight: lighter;
 }
 
 #getStartedButton {
-    border: 3px solid darkorange;
+    border: 3px solid rgb(211, 127, 23);
     border-radius: 50px;
-    padding: 10px;
-    background-color: yellow;
+    padding: 5px 20px;
+    background-color: rgb(252, 214, 61);
     margin: 0 auto;
     display: block;
+    color: rgb(211, 127, 23);
+    font-size: 15pt;
 }
