--- a/Week1/Webpage Project/style.css
+++ b/Week1/Webpage Project/style.css
@@ -8,11 +8,14 @@ body {
 }
 header {
     /* background-color: cornflowerblue; */
+    height: 50px;
     margin: 15px 30px;
+    border: 2px dashed peachpuff;
 }
 
 #logo {
     height: 50px;
+    float: left;
 }
 
 #hamburgerIcon {
@@ -26,34 +29,44 @@ header {
     height: 500px;
     background-image: url("assets/spices.jpg");
     background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: contain;
+    background-size: cover;
     background-color: rgba(100, 100, 100, 90);
 }
 
 #splash div {
     position: absolute;
     width: 100%;
-    margin-top: 150px; /*find a more elegant way to position this div vertically*/
+    top: 150px;
 
-    /* background-color: tomato; */
+    /* background-color: cornflowerblue; */
 }
 h3 {
     color: white;
     text-align: center;
-    font-size: 20pt;
-
+    font-size: 30pt;
     font-style: italic;
     font-weight: lighter;
+    line-height: 50%;
 }
 
 #getStartedButton {
     border: 3px solid rgb(211, 127, 23);
     border-radius: 50px;
-    padding: 5px 20px;
+    padding: 5px 30px;
     background-color: rgb(252, 214, 61);
-    margin: 0 auto;
+    margin: 0 auto; /*same space on left & right*/
     display: block;
     color: rgb(211, 127, 23);
-    font-size: 15pt;
+    font-size: 20pt;
+}
+
+#promises {
+    background-color: lightgray;
+    width: 100%;
+    height: 400px;
+}
+
+footer {
+    background-color: darkgray;
+    height: 40px;
 }
