--- a/Week1/Webpage Project/style.css
+++ b/Week1/Webpage Project/style.css
@@ -10,7 +10,39 @@ header {
     /* background-color: cornflowerblue; */
     height: 50px;
     margin: 15px 30px;
-    border: 2px dashed peachpuff;
+    /* border: 2px dashed peachpuff; */
+}
+
+h1 {
+    color: white;
+    text-align: center;
+    font-size: 30pt;
+    font-style: italic;
+    font-weight: lighter;
+    position: relative;
+    top: 150px;
+
+    /* border: 1px dotted turquoise; */
+}
+
+#getStartedButton {
+    border: 3px solid rgb(211, 127, 23);
+    border-radius: 50px;
+    padding: 5px 30px;
+    background-color: rgb(252, 214, 61);
+    color: rgb(211, 127, 23);
+
+    font-size: 20pt;
+    margin: 0 auto; /*same space on left & right*/
+    display: block;
+    position: relative;
+    top: 150px;
+    /* border: 1px dotted tomato; */
+}
+
+h2 {
+    font-size: 12pt;
+    line-height: 30%;
 }
 
 #logo {
@@ -25,48 +57,53 @@ header {
 }
 
 #splash {
-    position: relative;
     height: 500px;
     background-image: url("assets/spices.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-color: rgba(100, 100, 100, 90);
+    /* border: 4px dotted skyblue; */
 }
 
-#splash div {
+/* #splash div {
     position: absolute;
     width: 100%;
     top: 150px;
 
-    /* background-color: cornflowerblue; */
-}
-h3 {
-    color: white;
-    text-align: center;
-    font-size: 30pt;
-    font-style: italic;
-    font-weight: lighter;
-    line-height: 50%;
-}
-
-#getStartedButton {
-    border: 3px solid rgb(211, 127, 23);
-    border-radius: 50px;
-    padding: 5px 30px;
-    background-color: rgb(252, 214, 61);
-    margin: 0 auto; /*same space on left & right*/
-    display: block;
-    color: rgb(211, 127, 23);
-    font-size: 20pt;
-}
+    /* background-color: cornflowerblue;
+} */
 
 #promises {
     background-color: lightgray;
-    width: 100%;
-    height: 400px;
+    position: relative;
+    /* height: 200px; */
+    display: block;
+    padding: 50px;
+    overflow: hidden;
+}
+
+#promises div {
+    float: left;
+
+    width: 400px;
+    /* border: 2px dashed coral; */
+}
+
+.icon {
+    /* position: relative; */
+    height: 40px;
+    padding: 10px;
+    float: left;
 }
 
 footer {
-    background-color: darkgray;
+    background-color: rgb(108, 108, 108);
     height: 40px;
+}
+
+footer p {
+    padding: 10px 20px;
+    color: white;
+    font-size: 10pt;
+    margin: 0;
 }
