--- a/Week2/exercises/DOM_Events_style.css
+++ b/Week2/exercises/DOM_Events_style.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 #box {
     position: absolute;
@@ -10,4 +11,22 @@
     height: 100px;
     background-color: crimson;
     z-index: -1;
+}
+
+section {
+    height: 300px;
+    border: hotpink 2px dotted;
+    margin-bottom: 5px;
+}
+#exercise1 {
+    overflow: hidden;
+}
+
+#blackBox {
+    position: relative;
+    left: 10px;
+    top: 10px;
+    width: 100px;
+    height: 100px;
+    border: 2px solid black;
 }
