--- a/Week2/exercises/DOM_Events_style.css
+++ b/Week2/exercises/DOM_Events_style.css
@@ -30,3 +30,14 @@ section {
     height: 100px;
     border: 2px solid black;
 }
+
+#outerBox {
+    width: 200px;
+    height: 200px;
+    background-color: chocolate;
+}
+#innerBox {
+    width: 50px;
+    height: 50px;
+    background-color: goldenrod;
+}
