--- a/Week1/Webpage Project/style.css
+++ b/Week1/Webpage Project/style.css
@@ -10,10 +10,19 @@ body {
     font-size: 12pt;
     overflow-x: hidden;
 }
-
+body.backdrop::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+}
 header {
     height: 50px;
     padding: 15px 30px;
+
     /* border: 2px dashed peachpuff; */
 }
 
@@ -48,6 +57,8 @@ nav {
 }
 .open {
     transform: translateX(-100%);
+}
+.close {
 }
 
 nav ul {
