kitty carousel - part 2 - small fix: immediately move to clicked slide

--- a/projects/kitty carousel/style.css
+++ b/projects/kitty carousel/style.css
@@ -16,23 +16,15 @@ main {
 
 #kitty1 {
     background-image: url("assets/kit1.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
 }
 #kitty2 {
     background-image: url("assets/kit2.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
 }
 #kitty3 {
     background-image: url("assets/kit3.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
 }
 #kitty4 {
     background-image: url("assets/kit4.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
 }
 .slide {
     position: absolute;
@@ -40,6 +32,8 @@ main {
     height: 600px;
     display: inline-block;
     transform: translateX(100%);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 .slide.onscreen {
     transform: translateX(0);
@@ -78,4 +72,57 @@ main {
 }
 .dot.current {
     background-color: darksalmon;
+}
+
+/* for medium screens/tablet */
+@media screen and (max-width: 768px) {
+    .dot {
+    }
+    .dots {
+        display: flex;
+        justify-content: center;
+        align-items: flex-end;
+        height: 100vh;
+        margin: 0;
+        padding: 0;
+        z-index: 1;
+        list-style-type: none;
+    }
+    #carousel1 {
+        height: 100vh;
+        width: 100vw;
+    }
+    .slide {
+        height: 100vh;
+        background-size: cover;
+        background-position: center;
+    }
+}
+
+/* for small screens/smartphone */
+@media screen and (max-width: 640px) {
+    .dot {
+        width: 10px;
+        height: 10px;
+        margin: 5px 2px;
+    }
+    .dots {
+        display: flex;
+        justify-content: center;
+        align-items: flex-end;
+
+        margin: 0;
+        padding: 0;
+        z-index: 1;
+        list-style-type: none;
+    }
+    #carousel1 {
+        height: 100vh;
+        width: 100vw;
+    }
+    .slide {
+        height: 100vh;
+        background-size: cover;
+        background-position: center;
+    }
 }
