--- a/Week1/Webpage Project/style.css
+++ b/Week1/Webpage Project/style.css
@@ -26,8 +26,10 @@ header {
     /* border: 2px dashed peachpuff; */
 }
 
-a {
+a,
+a:visited {
     text-decoration: none;
+    color: cornflowerblue;
 }
 h1 {
     color: white;
@@ -46,7 +48,6 @@ nav {
     padding-top: 60px;
     padding-right: 20px;
     position: fixed;
-    font-size: 1.5rem;
     line-height: 2rem;
     background: white;
     height: 100vh;
@@ -54,6 +55,10 @@ nav {
     transform: translateX(100%);
     transition: transform 0.5s ease;
     z-index: 1;
+}
+
+nav a {
+    font-size: 1.5rem;
 }
 .open {
     transform: translateX(0);
@@ -207,7 +212,7 @@ footer p {
     body {
     }
     nav a {
-        font-size: 1.5rem;
+        font-size: 1rem;
     }
     #logo {
         height: 30px;
