--- a/projects/1st Webpage/style.css
+++ b/projects/1st Webpage/style.css
@@ -63,8 +63,6 @@ nav a {
 .open {
     transform: translateX(0);
 }
-.close {
-}
 
 nav ul {
     list-style-type: none;
@@ -118,8 +116,11 @@ h2 {
     cursor: pointer;
     border-radius: 50%;
     z-index: 2;
+    transform: rotate(0deg);
+    transition: transform 0.3s ease;
 }
-#hamburgerButton:active {
+#hamburgerButton.clicked {
+    transform: rotate(45deg);
 }
 
 #splash {
