--- a/projects/Incremental Search/incremental_style.css
+++ b/projects/Incremental Search/incremental_style.css
@@ -13,6 +13,9 @@ main {
 }
 .textInput {
     border: 1px solid palevioletred;
+    width: 400px;
+    padding: 10px;
+    font-size: 0.5rem;
 }
 .results {
     /* margin-top: 2px; */
@@ -28,6 +31,7 @@ main {
     border-top: 1px solid palevioletred;
     padding: 5px;
     font-size: 0.5rem;
+    cursor: pointer;
 }
 .results .indiResult:last-child {
     border-bottom-left-radius: 10px;
