--- a/projects/Connect Four/connect4_style.css
+++ b/projects/Connect Four/connect4_style.css
@@ -18,6 +18,7 @@ header {
 }
 main {
     display: flex;
+    flex-direction: row;
     justify-content: center;
 }
 
@@ -28,6 +29,7 @@ footer {
     display: flex;
     justify-content: space-between;
     top: 50vh;
+    z-index: -1;
 }
 h1 {
 }
@@ -49,16 +51,14 @@ h1 {
     border-radius: 50%;
 }
 .red {
-    /* border: palevioletred; */
-    background-color: palevioletred;
 }
 .blue {
-    /* border: cadetblue; */
-    background-color: cadetblue;
 }
 .yin {
+    background-color: palevioletred;
 }
 .yang {
+    background-color: cadetblue;
 }
 .yourTurn {
     transform: scale(1.5);
@@ -70,14 +70,10 @@ h1 {
     header {
         height: auto;
     }
-    main {
-        /* flex-direction: column; */
-    }
     footer {
         justify-content: center;
     }
-    .board {
-    }
+
     .slot {
         width: 30px;
         height: 30px;
@@ -89,11 +85,5 @@ h1 {
         margin: 10px;
         display: flex;
         position: relative;
-    }
-    .yin {
-        align-items: flex-start;
-    }
-    .yang {
-        align-items: flex-start;
     }
 }
