--- a/projects/Connect Four/connect4_style.css
+++ b/projects/Connect Four/connect4_style.css
@@ -23,6 +23,37 @@ main {
     /* background-color: black; */
 }
 
+section.message {
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    width: 100vw;
+    height: 370px;
+    opacity: 90%;
+    box-shadow: 5px 5px 50px;
+    animation: fadeIn linear 3s;
+}
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    90% {
+        opacity: 0.9;
+    }
+}
+section button {
+    font-size: 0.7rem;
+    margin: 10px;
+    padding: 10px;
+    border-radius: 15px;
+}
+section button:hover {
+    transform: translate(2px, 2px);
+    cursor: pointer;
+}
+
 footer {
     width: 100vw;
     margin-top: 25px;
@@ -52,7 +83,7 @@ h1 {
     animation-duration: 5000ms;
     animation-iteration-count: infinite;
     animation-timing-function: linear;
-    box-shadow: 5px 5px 5px;
+    box-shadow: 0px 0px 15px 2px;
 }
 @keyframes spin {
     from {
@@ -64,6 +95,24 @@ h1 {
 }
 
 .player {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    /* border: 1px dotted black; */
+}
+.player .name {
+    margin-left: -80px;
+    position: absolute;
+    /* border: 1px dotted black; */
+}
+.player .wins {
+    position: absolute;
+    font-size: 0.5rem;
+    margin-top: 60px;
+}
+
+.marker {
     min-width: 100px;
     min-height: 100px;
     margin: 50px;
@@ -71,18 +120,13 @@ h1 {
     overflow: visible;
     box-shadow: none;
 }
-.red {
-}
-.blue {
-}
-.yin {
+.yinCoin {
     background-color: palevioletred;
-    box-shadow: palevioletred !important;
 }
-.yang {
+.yangCoin {
     background-color: cadetblue;
-    box-shadow: cadetblue;
 }
+
 .yourTurn {
     transform: scale(1.5);
     transition: transform 0.3s ease;
@@ -100,18 +144,30 @@ h1 {
         position: relative;
         top: auto;
     }
-
+    section.message {
+        height: 208px;
+    }
     .slot {
         width: 30px;
         height: 30px;
         margin: 4px;
     }
     .player {
+    }
+    .player .name {
+        margin-left: -40px;
+        font-size: 0.5rem;
+    }
+    .player .wins {
+        font-size: 0.3rem;
+        margin-top: 30px;
+    }
+
+    .marker {
         min-width: 50px;
         min-height: 50px;
-        font-size: 0.7rem;
-        margin: 10px;
-        display: flex;
-        position: relative;
+        margin: 50px;
+        border-radius: 50%;
+        overflow: visible;
     }
 }
