--- a/projects/Connect Four/connect4_style.css
+++ b/projects/Connect Four/connect4_style.css
@@ -33,14 +33,14 @@ section.message {
     height: 370px;
     opacity: 90%;
     box-shadow: 5px 5px 50px;
-    animation: fadeIn linear 3s;
+    animation: fadeIn linear 2s;
 }
 @keyframes fadeIn {
     0% {
         opacity: 0;
     }
     90% {
-        opacity: 0.9;
+        opacity: 0.95;
     }
 }
 section button {
@@ -58,7 +58,7 @@ footer {
     width: 100vw;
     margin-top: 25px;
     display: flex;
-    z-index: -1;
+    /* z-index: -1; */
     justify-content: center;
     position: relative;
     top: auto;
@@ -67,6 +67,12 @@ h1 {
 }
 .board {
     display: flex;
+}
+.column:hover {
+}
+.column:hover .slot {
+    transition: box-shadow ease 0.2s;
+    box-shadow: 3px 3px 5px;
 }
 .slot {
     width: 50px;
@@ -101,10 +107,22 @@ h1 {
     justify-content: center;
     /* border: 1px dotted black; */
 }
-.player .name {
+/* .player .name {
     margin-left: -80px;
     position: absolute;
+    border: 1px dotted black;
+} */
+.player .Tname {
+    margin-left: 40px;
+    position: absolute;
+    border: none;
+    background: none;
+    z-index: 5;
+    width: 170px;
+}
+.player .Tname:hover {
     /* border: 1px dotted black; */
+    cursor: text;
 }
 .player .wins {
     position: absolute;
@@ -118,7 +136,8 @@ h1 {
     margin: 50px;
     border-radius: 50%;
     overflow: visible;
-    box-shadow: none;
+    transition: box-shadow ease 0.2s;
+    box-shadow: 3px 3px 5px;
 }
 .yinCoin {
     background-color: palevioletred;
