--- a/projects/Connect Four/connect4_style.css
+++ b/projects/Connect Four/connect4_style.css
@@ -124,6 +124,9 @@ h1 {
     /* border: 1px dotted black; */
     cursor: text;
 }
+.player .Tname::placeholder {
+    color: black;
+}
 .player .wins {
     position: absolute;
     font-size: 0.5rem;
