add .js event listener & handler

--- a/projects/Spotify Search/style.css
+++ b/projects/Spotify Search/style.css
@@ -39,6 +39,10 @@ main {
     flex: 1;
     background-color: coral;
 }
+ol {
+    width: 100vw;
+    margin: 0 100px;
+}
 #searchResultsheadline {
 }
 #searchResults {
