--- a/projects/Spotify Search/style.css
+++ b/projects/Spotify Search/style.css
@@ -11,6 +11,9 @@ button {
     border-radius: 10px;
     border: 1px solid grey;
     background-color: floralwhite;
+    cursor: pointer;
+}
+button:hover {
 }
 header {
     height: 200px;
@@ -72,4 +75,8 @@ ul li img {
 #searchResults {
 }
 #moreButton {
+}
+
+.hidden {
+    display: none;
 }
