--- a/exercises/Week6/express_handlebars/views/hello.handlebars
+++ b/exercises/Week6/express_handlebars/views/hello.handlebars
@@ -2,7 +2,7 @@
 <ul>
     {{#each cats}}
         <li>
-            <p>This is {{name}}.</p>
+            <h2>This is {{name}}.</h2>
             <p>{{name}} is {{age}} weeks old.</p>
             {{#if available}}
                 <button>Adopt me now!</button>
