--- a/exercises/Week6/express_handlebars/views/layouts/main.handlebars
+++ b/exercises/Week6/express_handlebars/views/layouts/main.handlebars
@@ -1,15 +1,17 @@
 <html>
     <head>
         <title>{{title}}</title>
-        <link rel="stylesheet" href="/stylesheet.css" />
+        <link rel="stylesheet" href="./css/{{style}}" />
     </head>
     <body>
-        <header><!-- header content goes here --></header>
+        <header>
+            <h1>Portfolio</h1>
+            <h2>Christo Gogler</h2>
+        </header>
 
         {{{body}}}
 
         <footer>
-            <h1>This is the main!</h1>
         </footer>
     </body>
 </html>
