add basic description page

--- a/exercises/Week6/express_handlebars/views/layouts/main.handlebars
+++ b/exercises/Week6/express_handlebars/views/layouts/main.handlebars
@@ -8,9 +8,9 @@
             <h1>Portfolio</h1>
             <h2>Christo Gogler</h2>
         </header>
-
-        {{{body}}}
-
+        <main>
+            {{{body}}}
+        </main>
         <footer>
         </footer>
     </body>
