--- a/exercises/Week6/express_handlebars/views/layouts/main.handlebars
+++ b/exercises/Week6/express_handlebars/views/layouts/main.handlebars
@@ -1,7 +1,8 @@
 <html>
     <head>
         <title>{{title}}</title>
-        <link rel="stylesheet" href="./css/{{style}}" />
+        <link rel="stylesheet" href="../css/style.css" />
+        <link rel="stylesheet" href="{{style}}" />
     </head>
     <body>
         <header>
